# zest

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  build.zig  build.zig.zon  flake.nix
.github/workflows/: ci.yml  release.yml
examples/: download_model.py
python/: README.md  pyproject.toml
python/zest/: __init__.py  cli.py  client.py  hf_backend.py  server.py
scripts/: build-wheel.sh
src/: bench.zig  bencode.zig  bep_xet.zig  bt_peer.zig  bt_tracker.zig  bt_wire.zig  cas.zig  cdn.zig  config.zig  dht.zig  hash.zig  http_api.zig  hub.zig  main.zig  parallel_download.zig  peer.zig  peer_id.zig  peer_pool.zig  protocol.zig  reconstruct.zig  root.zig  server.zig  storage.zig  swarm.zig  tracker.zig  xet_bridge.zig  xorb.zig
test/hetzner/: p2p-test.sh
test/local/: p2p-docker-test.sh  verify-model.sh
