[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zest-transfer"
version = "0.3.0"
description = "P2P acceleration for ML model distribution"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "zest contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28",
]

[project.scripts]
zest = "zest.cli:main"

[project.optional-dependencies]
hf = ["huggingface_hub>=0.20"]

[project.urls]
Homepage = "https://github.com/zest-project/zest"
Repository = "https://github.com/zest-project/zest"

[tool.setuptools.packages.find]
include = ["zest*"]

[tool.setuptools.package-data]
"zest._bin" = ["*"]
